# visu-sdk

./: Json.py  README.md  pyproject.toml  setup.py
Json/: JsonParser.py
base/: Model.py  Request.py  Response.py
classes/: executors.py
src/Image/: base64.py
src/base/: Capsule.py  Component.py  Model.py  Request.py  Response.py  ab_class.py  capsule.py  component.py  error.py  exception.py  model.py  object_detection.py  request.py  response.py  service.py
src/helper/: array.py  base64.py  json_parser.py
src/media/: image.py
